Fixed UV on pipes. Hey I cant be funny all the time.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,17 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Exports/GlovesTexture.png
+Roo_Texture.png
+Shirt_Texture.png
+Shorts_Texture.png
+Helmet_Texture.png
+Gloves_Texture.png
+GlovesTexture.png
+Googles_Straps_Texture.png
+CouncilWorker.blend
+CouncilWorker.blend1
+DepthGang.afphoto
+DepthGangSpeckle.afphoto
+Graffitis1.afphoto
+Graffitis1.afphoto~lock~
