--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.cysharp.unitask": "2.5.10",
     "com.rundotgames.unitybutler": "https://github.com/RunDotGames/unity-butler.git",
     "com.unity.ai.navigation": "2.0.5",
+    "com.unity.behavior": "1.0.8",
     "com.unity.burst": "1.8.18",
     "com.unity.cinemachine": "3.1.2",
     "com.unity.collab-proxy": "2.7.1",
